Agregamos inicializacion para operaciones.

--- a/ProyectoAplicada3/src/proyectoaplicada3/Inicio.form
+++ b/ProyectoAplicada3/src/proyectoaplicada3/Inicio.form
@@ -226,6 +226,7 @@
                     </Component>
                     <Component class="javax.swing.JTextField" name="BinferiorText">
                       <Events>
+                        <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="BinferiorTextActionPerformed"/>
                         <EventHandler event="keyTyped" listener="java.awt.event.KeyListener" parameters="java.awt.event.KeyEvent" handler="BinferiorTextKeyTyped"/>
                       </Events>
                     </Component>
