Estructuramos metodo de biseccion.

--- a/ProyectoAplicada3/src/proyectoaplicada3/Inicio.form
+++ b/ProyectoAplicada3/src/proyectoaplicada3/Inicio.form
@@ -211,7 +211,7 @@
                     </Component>
                     <Component class="javax.swing.JLabel" name="jLabel3">
                       <Properties>
-                        <Property name="text" type="java.lang.String" value="Error absoluto permitido:"/>
+                        <Property name="text" type="java.lang.String" value="Iteraciones a realizar"/>
                       </Properties>
                     </Component>
                     <Component class="javax.swing.JTextField" name="BerrorText">
